UF-14181: Normalize all attachment API models
